feat: add akamai platform support
Add support for the Akamai(Linode) platform

Signed-off-by: Evan Johnson <ejohnson@akamai.com>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -195,6 +195,12 @@ machine:
 ```
 """
 
+    [notes.platforms]
+        title = "Platforms"
+        description = """\
+Talos Linux now supports [Akamai Connected Cloud](https://www.linode.com/) provider (platform `akamai`).
+"""
+
 [make_deps]
 
     [make_deps.tools]
