feat: implement local caching dns server
This PR adds a new controller - `DNSServerController` that starts tcp and udp dns servers locally. Just like `EtcFileController` it monitors `ResolverStatusType` and updates the list of destinations from there.

Most of the caching logic is in our "lobotomized" "`CoreDNS` fork. We need this fork because default `CoreDNS` carries
full Caddy server and various other modules that we don't need in Talos. On our side we implement
random selection of the actual dns and request forwarding.

Closes #7693

Signed-off-by: Dmitriy Matrenichev <dmitry.matrenichev@siderolabs.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -133,6 +133,7 @@ linters-settings:
       - gopkg.in/yaml.v3
       - github.com/vmware-tanzu/sonobuoy
       - golang.org/x/sys
+      - github.com/coredns/coredns
     retract-allow-no-explanation: false
     exclude-forbidden: true
 
