--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,6 +18,7 @@ preface = """\
         title = "Component Updates"
         description = """\
 Linux: 6.1.74
+Kubernetes: 1.29.1
 
 Talos is built with Go 1.21.6.
 """
