--- a/hack/release.toml
+++ b/hack/release.toml
@@ -6,7 +6,7 @@ github_repo = "siderolabs/talos"
 match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 
 # previous release
-previous = "v1.6.0-beta.1"
+previous = "v1.6.0"
 
 pre_release = true
 
@@ -17,7 +17,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.1.73
+Linux: 6.6.13
 etcd: 3.5.11
 Kubernetes: 1.29.1
 containerd: 1.7.12
@@ -31,6 +31,12 @@ Talos is built with Go 1.21.6.
         title = "Device Selectors"
         description = """\
 Talos Linux now supports `physical: true` qualifier for device selectors, it selects non-virtual network interfaces (i.e. `en0` is selected, while `bond0` is not).
+"""
+
+    [notes.problems]
+        title = "Known Problems"
+        description = """\
+ZFS and DRBD extensions are disabled in this release due to incompatibility with the latest Linux kernel.
 """
 
 [make_deps]
