feat: use RSA key for kube-apiserver service account key
Fixes #8111

Starting with 1.7, use RSA instead of ECDSA.

RSA is way slower, but it has better support with other providers.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -51,6 +51,12 @@ machine:
 ```
 """
 
+    [notes.rsa-service-account]
+        title = "Kubernetes API Server Service Account Key"
+        description = """\
+Talos Linux starting from this release uses RSA key for Kubernetes API Server Service Account instead of ECDSA key to provide better compatibility with external OpenID Connect implementations.
+"""
+
 [make_deps]
 
     [make_deps.tools]
