--- a/hack/release.toml
+++ b/hack/release.toml
@@ -23,6 +23,8 @@ runc: 1.1.12
 See [CVE-2024-21626](https://github.com/opencontainers/runc/security/advisories/GHSA-xr7r-f8xq-vfvv) for the runc update.
 
 Talos is built with Go 1.21.6.
+
+foo
 """
 
 
