feat: support hardware watchdog timers
Only enabled when activated by config, disabled on shutdown/reboot

Fixes #8284

Signed-off-by: Dmitry Sharshakov <dmitry.sharshakov@siderolabs.com>
Signed-off-by: Dmitry Sharshakov <d3dx12.xx@gmail.com>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -163,6 +163,22 @@ machine:
 Talos Linux now supports rotating the root CA certificate and key for Talos API and Kubernetes API.
 """
 
+    [notes.watchdog]
+        title = "Hardware Watchdog Timers"
+        description = """\
+Talos Linux now supports hardware watchdog timers configuration.
+If enabled, and the machine becomes unresponsive, the hardware watchdog will reset the machine.
+
+The watchdog can be enabled with the following configuration document:
+
+```yaml
+apiVersion: v1alpha1
+kind: WatchdogTimerConfig
+device: /dev/watchdog0
+timeout: 3m0s
+```
+"""
+
 [make_deps]
 
     [make_deps.tools]
