fix: disable KubeSpan endpoint harvesting by default
This disables by default (if not specified in the machine config) the
endpoint harvesting for KubeSpan peers.

The idea was to observe Wireguard endpoints as seen by other peers in
the cluster, and add them to the list of endpoints for the node. This
might be helpful only in case of some special type of NATs which are
almost never seen in the wild today.

So disable by default, but keep an option to enable it.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -108,6 +108,22 @@ The command `talosctl upgrade-k8s` now supports specifying custom image referenc
 The default behavior is unchanged, and the flags are optional.
 """
 
+    [notes.kubespan]
+        title = "KubeSpan"
+        description = """\
+Talos Linux disables by default a KubeSpan feature to harvest additional endpoints from KubeSpan members.
+This feature turned out to be less helpful than expected and caused unnecessary performance issues.
+
+Previous behavior can be restored with:
+
+```yaml
+machine:
+  network:
+    kubespan:
+        harvestExtraEndpoints: true
+```
+"""
+
 [make_deps]
 
     [make_deps.tools]
