feat: update Linux to 6.1.78
Latest LTS kernel.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,6 +18,7 @@ preface = """\
         title = "Component Updates"
         description = """\
 Kubernetes: 1.29.2
+Linux: 6.1.78
 
 Talos is built with Go 1.21.6.
 """
