feat: implement `Install` for imager overlays
Implement `Install` for imager overlays.
Also add support for generating installers.

Depends on: #8377

Fixes: #8350
Fixes: #8351
Fixes: #8350

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -124,6 +124,13 @@ machine:
 ```
 """
 
+    [notes.sbc]
+        title = "SBC"
+        description = """\
+Talos core will drop support for SBC's and will not include the SBC binaries in the release.
+*Overlays* are being developed to support SBC's.
+"""
+
     [notes.syslog]
         title = "Syslog"
         description = """\
