feat: implement blockdevice watch controller
This controller combines kobject events, and scan of `/sys/block` to
build a consistent list of available block devices, updating resources
as the blockdevice changes.

Based on these resources the next step can run probe on the blockdevices
as they change to present a consistent view of filesystems/partitions.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -100,9 +100,8 @@ linters-settings:
     replace-local: true
     replace-allow-list:
       - gopkg.in/yaml.v3
-      - github.com/vmware-tanzu/sonobuoy
-      - golang.org/x/sys
       - github.com/coredns/coredns
+      - github.com/mdlayher/kobject
     retract-allow-no-explanation: false
     exclude-forbidden: true
 
