--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,7 +17,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.1.80
+* Linux: 6.1.80
 
 Talos is built with Go 1.21.8.
 """
