feat: set default NTP server to time.cloudflare.com
Fixes #8396

Pros:

* IPv6
* good CDN, small RTT

Cons:

* not community-run

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -134,6 +134,13 @@ The logs can be viewed via `talosctl logs syslogd`.
 This is mostly implemented for extension services that log to syslog.
 """
 
+    [notes.ntp]
+        title = "NTP"
+        description = """\
+Default NTP server was updated to be `time.cloudflare.com` instead of `pool.ntp.org`.
+Default server is only used if the user does not specify any NTP servers in the configuration.
+"""
+
 [make_deps]
 
     [make_deps.tools]
