feat: support rotation of Talos API CA
This allows to roll all nodes to use a new CA, to refresh it, or e.g.
when the `talosconfig` was exposed accidentally.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -157,6 +157,12 @@ machine:
 ```
 """
 
+    [notes.ca-rotation]
+        title = "CA Rotation"
+        description = """\
+Talos Linux now supports rotating the root CA certificate and key for Talos API and Kubernetes API.
+"""
+
 [make_deps]
 
     [make_deps.tools]
