chore: enable "WG over GRPC" testing in siderolink agent tests
Fixes https://github.com/siderolabs/talos/issues/8514
For https://github.com/siderolabs/talos/issues/8392

Signed-off-by: Dmitriy Matrenichev <dmitry.matrenichev@siderolabs.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -97,6 +97,8 @@ linters-settings:
       - gopkg.in/yaml.v3
       - github.com/coredns/coredns
       - github.com/mdlayher/kobject
+      - golang.zx2c4.com/wireguard
+      - golang.zx2c4.com/wireguard/wgctrl
     retract-allow-no-explanation: false
     exclude-forbidden: true
 
