--- a/hack/release.toml
+++ b/hack/release.toml
@@ -56,6 +56,16 @@ machine:
 ```
 
 Please note that on running cluster you will have to kill CoreDNS pods for this change to apply.
+
+If you want to can also enable the resolving of member addresses through their host and node names:
+
+```yaml
+machine:
+  features:
+    hostDNS:
+      enabled: true
+      resolveMemberNames: true
+```
 """
 
     [notes.secureboot-image]
