--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,7 +19,7 @@ preface = """\
         description = """\
 Linux: 6.6.26
 etcd: 3.5.11
-Kubernetes: 1.30.0-rc.2
+Kubernetes: 1.30.0
 containerd: 1.7.15
 runc: 1.1.12
 Flannel: 0.25.1
