--- a/hack/release.toml
+++ b/hack/release.toml
@@ -8,7 +8,7 @@ match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 # previous release
 previous = "v1.6.0"
 
-pre_release = true
+pre_release = false
 
 preface = """\
 """
@@ -17,7 +17,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.6.26
+Linux: 6.6.28
 etcd: 3.5.11
 Kubernetes: 1.30.0
 containerd: 1.7.15
