--- a/internal/app/machined/pkg/controllers/k8s/templates/talos-host-dns-svc-template.yaml
+++ b/internal/app/machined/pkg/controllers/k8s/templates/talos-host-dns-svc-template.yaml
@@ -15,3 +15,19 @@ spec:
     protocol: TCP
     targetPort: 53
   type: ClusterIP
+---
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: host-dns
+  namespace: kube-system
+subsets:
+  - addresses:
+    - ip: {{ .ServiceHostDNSAddress }}
+    ports:
+    - name: dns
+      port: 53
+      protocol: UDP
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
