--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,6 +17,9 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
+Linux: 6.6.29
+containerd: 1.7.16
+
 Talos is built with Go 1.22.2.
 """
 
