fix: add cluster name to the worker machine config
This is 1.8+ only.

Fixes #8694

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.8/base-worker.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.8/base-worker.yaml
@@ -30,6 +30,7 @@ cluster:
     secret: pofHbABZq7VXuObsdLdy/bHmz6hlMHZ3p8+6WKrv1ic=
     controlPlane:
         endpoint: https://base:6443
+    clusterName: base
     network:
         dnsDomain: cluster.local
         podSubnets:
