--- a/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.8/overrides-worker.yaml
+++ b/pkg/machinery/config/types/v1alpha1/testdata/stability/v1.8/overrides-worker.yaml
@@ -44,6 +44,7 @@ machine:
             port: 7445
         hostDNS:
             enabled: true
+            forwardKubeDNSToHost: true
 cluster:
     id: 0raF93qnkMvF-FZNuvyGozXNdLiT2FOWSlyBaW4PR-w=
     secret: pofHbABZq7VXuObsdLdy/bHmz6hlMHZ3p8+6WKrv1ic=
