chore: update Go to 1.22.3
Also bump dependencies.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -106,6 +106,7 @@ linters:
   enable-all: true
   disable:
     - errorlint
+    - err113
     - exhaustruct
     - exhaustivestruct
     - forbidigo
@@ -115,11 +116,11 @@ linters:
     - gochecknoinits
     - gocognit
     - godox
-    - goerr113
     - gomnd
     - gosec
     - ireturn # we return interfaces
     - maintidx
+    - mnd
     - nestif
     - nilnil # we return "nil, nil"
     - nonamedreturns
