--- a/hack/release.toml
+++ b/hack/release.toml
@@ -17,6 +17,7 @@ preface = """\
     [notes.updates]
         title = "Component Updates"
         description = """\
+Kubernetes: 1.30.1
 Linux: 6.6.30
 
 Talos is built with Go 1.22.3.
