--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,7 +19,8 @@ preface = """\
         description = """\
 Kubernetes: 1.30.1
 Linux: 6.6.30
-containerd: 1.7.16
+containerd: 2.0.0-rc.2
+runc: 1.2.0-rc.1
 
 Talos is built with Go 1.22.3.
 """
