feat: implement Talos diagnostics
Talos diagnostics analyzes current system state and comes up with detailed
warnings on the system misconfiguration which might be tricky to figure
out other way.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -58,6 +58,13 @@ Please note that on running cluster you will have to kill CoreDNS pods for this 
 A list of PCI devices can now be obtained via `PCIDevices` resource, e.g. `talosctl get pcidevices`.
 """
 
+    [notes.diagnostics]
+        title = "Diagnostics"
+        description = """\
+Talos Linux now shows diagnostics information for common problems related to misconfiguration via `talosctl health` and Talos dashboard.
+"""
+
+
 [make_deps]
 
     [make_deps.tools]
